objects/ssot__LoyaltyTierGroup__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Tier Group Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsExtendedToEndOfMonth__c</fullName>
        <label>Is Extended To End Of Month</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsHiddenToMembers__c</fullName>
        <label>Is Hidden To Members</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimary__c</fullName>
        <label>Is Primary</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramId__c</fullName>
        <label>Loyalty Program</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyTierModelId__c</fullName>
        <label>Loyalty Tier Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__QualifyingPointsResetDate__c</fullName>
        <label>Qualifying Points Reset Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__QualifyingPointsResetFrequencyNumber__c</fullName>
        <label>Qualifying Points Reset Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QualifyingPointsResetPeriodUOM__c</fullName>
        <label>Qualifying Points Reset Period UOM</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TierPeriodTimeUOM__c</fullName>
        <label>Tier Period Time UOM</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TierTimePeriodQuantity__c</fullName>
        <label>Tier Time Period Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761184386_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgram_Id_map_LoyaltyTierGro_rel</label>
        <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgram_Id_map_LoyaltyTierGro_rel</relationshipLabel>
        <relationshipName>rel_1697761184386_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761184970_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyTierGroup_LoyaltyProgramId_ma_rel</label>
        <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
        <relationshipLabel>LoyaltyTierGroup_LoyaltyProgramId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761184970_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>